--- a/src/components/Product/VariantSelector.css
+++ b/src/components/Product/VariantSelector.css
@@ -37,6 +37,7 @@
     align-items: flex-start;
     padding-left: 0;
     margin-left: 1em;
+    width: calc(100% - 5rem);
   }
-
+  
 }
